# data_viewer_py

./: pyproject.toml
data_viewer_py/: __init__.py  magic.py  viewer.py
