[project]
name = "data-viewer-py"
version = "0.1.0"
description = "A Python library to launch the Data Viewer application from pandas/polars DataFrames."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["data viewer", "pandas", "polars"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.3.0"]
polars = ["polars>=1.3.0"]
arrow = ["pyarrow>=17.0.0"]
ipython = ["ipython>=8.26.0"]
all = [
  "data-viewer-py[pandas]",
  "data-viewer-py[polars]",
  "data-viewer-py[arrow]",
  "data-viewer-py[ipython]",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

